# phievse

./: .gitignore  LICENSE.md  README.md
firmware/: Cargo.toml  README.md  build.rs  flash_bootloader.sh  ota.sh  partitions.csv  sdkconfig.defaults  test.sh
firmware/.cargo/: config.toml
firmware/src/: adc.rs  config.rs  control_pilot.rs  current_meter.rs  gpio.rs  led.rs  lib.rs  logger.rs  main.rs  pinout.txt  watchdog.rs
firmware/src/driver/: adc.rs  gpio.rs  led.rs  mod.rs  watchdog.rs
firmware/src/httpd/: config.rs  mod.rs  ota.rs
firmware/src/mqtt/: max_power.json  mod.rs  power.json  state.json
firmware/templates/: base.html  config.html  log.html  ota_info.html  status.html
hardware/: README.md  phievse-lib.kicad_sym  phievse.kicad_prl  phievse.kicad_pro  phievse.kicad_sch  sym-lib-table
